Adjust terminal size and positioning in responsive view to prevent overlap with desktop icons

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -81,8 +81,12 @@ html, body {
   .terminal-window {
     width: 370px !important;
     left: 50% !important;
-    top: 100px;
+    top: 55px !important; 
     transform: translateX(-50%) !important;
+  }
+
+  .terminal {
+    height: 530px !important;
   }
 
   .desktop-icons {
@@ -98,6 +102,7 @@ html, body {
 
   .terminal-wrapper {
     max-height: 75%;
+    margin-bottom: 90px;
   }
 
   .top-panel {
